src/css/index.css
html, body {
  margin: 0;
  padding: 0;
}

#wrapper {
  display: flex;  /* use the flex model */
  height: 100vh;
  flex-direction: column;  /* learn more: http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/ */
  background: #FFFFFF;
}

#content {
  flex:1;
}

#cliniccomponents{
  display: flex; /* or inline-flex */
}

@media screen and (min-width: 0px) and (max-width: 400px) {
  #hide-mobile { display: none; }  /* hide it on small screens */
}

@media screen and (min-width: 401px) and (max-width: 1024px) {
  #hide-mobile { display: block; }   /* show it elsewhere */
}

